static/css/styles.css
body {
    background-color: #ffffff;
    color: #141414;
    transition: background-color 0.3s, color 0.3s;
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    padding: 20px;
}

.titleContainer {
    margin-bottom: 50px;
}

.title {
    font-size: 32px;
    font-weight: bold;
}

.button {
    width: 300px;
    height: 60px;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 2px solid #000;
    border-radius: 10px;
    margin: 10px;
    font-size: 18px;
    background-color: #e0e0e0;
    color: #000;
    transition: background-color 0.3s, color 0.3s, border-color 0.3s;
}

.button:hover {
    background-color: #949393;
}

.imageButtonContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    margin-top: 10px;
}

.image {
    max-width: 100%;
    max-height: 350px;
    margin-bottom: 10px;
}

.loading {
    font-size: 24px;
    font-weight: bold;
}

.prediction {
    margin-top: 10px;
    margin-bottom: 10px;
}

.predictionText {
    font-size: 20px;
    text-align: center;
}

.instructionText {
    font-size: 18px;
    text-align: center;
    color: #141414;
}

body.night-mode {
    background-color: #000000;
    color: #ffffff;
}

.night-mode .button {
    background-color: #333;
    color: #fff;
    border-color: #fff;
}

.night-mode .button:hover {
    background-color: #949393;
}

.night-mode .instructionText {
    color: #ffffff;
}

